// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table matches snapshot for example: example mount 1`] = `
.emotion-8 {
  border: 0;
  border-collapse: collapse;
  box-sizing: border-box;
  border-spacing: 0;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 14px;
  line-height: 1.1428571429;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    font-size: 16px;
    line-height: 1.25;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.25;
  text-align: left;
  text-transform: none;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-2 {
  border: 0;
  border-bottom: 1px solid #bfc1c3;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  padding: 0.63158em 1.05263em 0.47368em 0;
  text-align: left;
  text-transform: none;
  word-break: break-word;
}

.emotion-2:last-child {
  padding-right: 0;
}

@media only screen and (min-width:641px) {
  .emotion-2 {
    font-size: 19px;
    line-height: 1.3;
  }
}

<Table
  body={
    <Row>
      <Cell>
        Example
      </Cell>
    </Row>
  }
>
  <StyledTable>
    <table
      className="emotion-8 emotion-9"
    >
      <Caption>
        <caption
          className="emotion-0 emotion-1"
        />
      </Caption>
      <TableBody>
        <tbody
          className="emotion-6 emotion-7"
        >
          <Row>
            <RowInner>
              <tr
                className="emotion-4 emotion-5"
              >
                <Cell>
                  <CellInner>
                    <td
                      className="emotion-2 emotion-3"
                    >
                      Example
                    </td>
                  </CellInner>
                </Cell>
              </tr>
            </RowInner>
          </Row>
        </tbody>
      </TableBody>
    </table>
  </StyledTable>
</Table>
`;

exports[`Table matches snapshot for exampleWithHead: exampleWithHead mount 1`] = `
.emotion-14 {
  border: 0;
  border-collapse: collapse;
  box-sizing: border-box;
  border-spacing: 0;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 14px;
  line-height: 1.1428571429;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-14 {
    font-size: 16px;
    line-height: 1.25;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.25;
  text-align: left;
  text-transform: none;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-2 {
  border: 0;
  border-bottom: 1px solid #bfc1c3;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  padding: 0.63158em 1.05263em 0.47368em 0;
  text-align: left;
  text-transform: none;
  word-break: break-word;
}

.emotion-2:last-child {
  padding-right: 0;
}

@media only screen and (min-width:641px) {
  .emotion-2 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-6 th {
  font-weight: 700;
}

<Table
  body={
    <Row>
      <Cell>
        Example
      </Cell>
    </Row>
  }
  head={
    <Row>
      <Cell>
        Example
      </Cell>
    </Row>
  }
>
  <StyledTable>
    <table
      className="emotion-14 emotion-15"
    >
      <Caption>
        <caption
          className="emotion-0 emotion-1"
        />
      </Caption>
      <TableHeader>
        <thead
          className="emotion-6 emotion-7"
        >
          <Row>
            <RowInner>
              <tr
                className="emotion-4 emotion-5"
              >
                <Cell>
                  <CellInner>
                    <td
                      className="emotion-2 emotion-3"
                    >
                      Example
                    </td>
                  </CellInner>
                </Cell>
              </tr>
            </RowInner>
          </Row>
        </thead>
      </TableHeader>
      <TableBody>
        <tbody
          className="emotion-12 emotion-13"
        >
          <Row>
            <RowInner>
              <tr
                className="emotion-4 emotion-5"
              >
                <Cell>
                  <CellInner>
                    <td
                      className="emotion-2 emotion-3"
                    >
                      Example
                    </td>
                  </CellInner>
                </Cell>
              </tr>
            </RowInner>
          </Row>
        </tbody>
      </TableBody>
    </table>
  </StyledTable>
</Table>
`;
